--- a/order-fulfillment/build.xml
+++ b/order-fulfillment/build.xml
@@ -1,70 +1,22 @@
-<project name="Ninja Demo">
-    <target name="properties">
-        <echoproperties/>
+<!-- If schema isnot visible run 'mvn initialize'-->
+<!DOCTYPE project PUBLIC "Ninja" "./target/schemas/ninja-tasks.dtd"[]>
+<project>
+    <target name="init.classpath.manually">
+        <echo message="Should not run, just fix for IDEA"/>
+        <path id="maven.plugin.classpath"/>
     </target>
 
-    <target name="bootstrap">
+    <target name="init">
         <echo message="Starting from ${basedir}"/>
-
-        <condition property="maven.plugin.classpath.exists">
-            <available classpath="maven.plugin.classpath" classname="ru.lanit.bpm.goblin.ant.tasks.BuildChunksTask"/>
-        </condition>
+        <typedef resource="ru/lanit/bpm/goblin/antlib.xml" classpathref="maven.plugin.classpath"/>
+        <typedef resource="ru/lanit/bpm/ninja/antlib.xml" classpathref="maven.plugin.classpath"/>
+        <typedef name="embedded" classname="ru.lanit.bpm.goblin.ant.tasks.EmbeddedTask"/>
+        <typedef name="exclude" classname="ru.lanit.bpm.goblin.ant.tasks.DependencyExclude"/>
     </target>
 
-    <target name="init.classpath.manually" unless="maven.plugin.classpath.exists">
-        <echo message="Initializing classpath manually"/>
-        <property environment="env"/>
-        <property name="goblin.version" value="4.354.RELEASE"/>
-        <property name="ninja.version" value="2.1.2728.RELEASE"/>
-        <property name="M2_REPO" value="${env.M2_REPO}"/>
-        <path id="maven.plugin.classpath">
-            <pathelement location="${M2_REPO}/ru/lanit/bpm/goblin/goblin-ant-common/${goblin.version}/goblin-ant-common-${goblin.version}.jar"/>
-            <pathelement location="${M2_REPO}/ru/lanit/bpm/goblin/goblin-ant-base-tasks/${goblin.version}/goblin-ant-base-tasks-${goblin.version}.jar"/>
-            <pathelement
-                    location="${M2_REPO}/ru/lanit/bpm/ninja/ninja-ra-goblin-tasks/${ninja.version}/ninja-ra-goblin-tasks-${ninja.version}.jar"/>
-            <pathelement location="${M2_REPO}/ru/lanit/bpm/ninja/ninja-delivery-common/${ninja.version}/ninja-delivery-common-${ninja.version}.jar"/>
-            <pathelement location="${M2_REPO}/ru/lanit/bpm/ninja/ninja-client-pegaclient/${ninja.version}/ninja-client-pegaclient-${ninja.version}.jar"/>
-            <pathelement location="${M2_REPO}/org/apache/httpcomponents/httpcore/4.4.4/httpcore-4.4.4.jar"/>
-            <pathelement location="${M2_REPO}/org/apache/httpcomponents/httpclient/4.5.2/httpclient-4.5.2.jar"/>
-        </path>
-        <property name="dir.build" value="${basedir}/target/build"/>
-    </target>
+    <target name="build" depends="init">
 
-    <target name="init" depends="init.classpath.manually">
-        <typedef name="buildchunks" classname="ru.lanit.bpm.goblin.ant.tasks.BuildChunksTask" classpathref="maven.plugin.classpath"/>
-        <typedef name="pegaarchive" classname="ru.lanit.bpm.ninja.ra.goblin.tasks.PegaArchiveTask" classpathref="maven.plugin.classpath"/>
-        <typedef name="pegaactivity" classname="ru.lanit.bpm.ninja.ra.goblin.tasks.PegaActivityTask" classpathref="maven.plugin.classpath"/>
-        <typedef name="ruleset" classname="ru.lanit.bpm.ninja.ra.goblin.tasks.RuleSetTask" classpathref="maven.plugin.classpath"/>
-        <typedef name="instance" classname="ru.lanit.bpm.ninja.ra.goblin.tasks.InstanceTask" classpathref="maven.plugin.classpath"/>
-        <typedef name="sqlscripts" classname="ru.lanit.bpm.goblin.ant.tasks.SqlScriptsTask" classpathref="maven.plugin.classpath"/>
-        <typedef name="embedded" classname="ru.lanit.bpm.goblin.ant.tasks.EmbeddedTask" classpathref="maven.plugin.classpath"/>
-    </target>
-
-    <target name="build" depends="bootstrap,package"/>
-
-    <target name="package" depends="init">
-        <property name="dir.src.resources" value="${basedir}/src/main/resources"/>
-        <property name="dir.parent.src.resources" value="${basedir}/../src/main/resources"/>
-        <property name="dir.staging" value="${dir.build}/staging"/>
-        <property name="dir.archive-temp" value="${dir.staging}/archive-temp"/>
-
-        <mkdir dir="${dir.staging}"/>
-        <copy todir="${dir.staging}" flatten="true">
-            <path refid="maven.plugin.classpath"/>
-        </copy>
-
-        <!-- Remove erroneous ext-* from ninja-pega-runtime -->
-        <mkdir dir="${dir.archive-temp}"/>
-        <unzip src="${dir.staging}/ninja-pega-runtime-${ninja.version}.zip" dest="${dir.archive-temp}"/>
-        <delete>
-            <fileset dir="${dir.archive-temp}/lib" includes="ninja-ra-goblin-ext-*.jar"/>
-        </delete>
-        <zip basedir="${dir.archive-temp}" destfile="${dir.staging}/ninja-pega-runtime-${ninja.version}.zip"/>
-        <delete dir="${dir.archive-temp}"/>
-
-        <buildchunks builddir="${dir.build}" dumpdir="${dir.build.dump}" dumpmode="${dump.mode}">
-            <embedded chunkid="ninja-pega-runtime" src="${dir.staging}/ninja-pega-runtime-${ninja.version}.zip"/>
-
+        <goblin builddir="${ninja.build.dir}" dumpdir="${ninja.build.dir.dump}" dumpmode="on">
             <pegaactivity chunkid="delete-ninja-tech-user" componentid="pega-webapp" classname="@baseclass" activityname="DeleteObject">
                 <parameter name="InsKey" value="DATA-ADMIN-OPERATOR-ID #{ninja.tech.operator.id}"/>
             </pegaactivity>
@@ -79,16 +31,16 @@
                 <parameter name="unitName" value="Installation"/>
             </pegaactivity>
 
-            <sqlscripts defaultDialect="POSTGRESQL" chunkidprefix="db-pega-" chunksdir="${basedir}/src/main/dbscripts" componentid="pega-db"/>
+            <sqlscripts defaultdialect="POSTGRESQL" chunkidprefix="db-pega-" chunksdir="${basedir}/src/main/dbscripts" componentid="pega-db"/>
 
             <pegaarchive chunkid="orders-app" componentid="orders-webapp">
-                <ruleset name="OrderFul" versions="[01-01:${cd.pega.ruleset.max.version}]" unlocked="${cd.build.pega.include.unlocked}"/>
-                <ruleset name="OrderFulInt" versions="[01-01:${cd.pega.ruleset.max.version}]" unlocked="${cd.build.pega.include.unlocked}"/>
-                <ruleset name="OJXU4T" versions="[01-01:${cd.pega.ruleset.max.version}]" unlocked="${cd.build.pega.include.unlocked}"/>
-                <ruleset name="OJXU4TInt" versions="[01-01:${cd.pega.ruleset.max.version}]" unlocked="${cd.build.pega.include.unlocked}"/>
-                <ruleset name="Azure" versions="[01-01:${cd.pega.ruleset.max.version}]" unlocked="${cd.build.pega.include.unlocked}"/>
-                <ruleset name="SearchMap" versions="[01-01:${cd.pega.ruleset.max.version}]" unlocked="${cd.build.pega.include.unlocked}"/>
-                <ruleset name="QuoteService" versions="[01-01:${cd.pega.ruleset.max.version}]" unlocked="${cd.build.pega.include.unlocked}"/>
+                <ruleset name="OrderFul" versions="[01-01:${cd.pega.ruleset.max.version}]" unlocked="true"/>
+                <ruleset name="OrderFulInt" versions="[01-01:${cd.pega.ruleset.max.version}]" unlocked="true"/>
+                <ruleset name="OJXU4T" versions="[01-01:${cd.pega.ruleset.max.version}]" unlocked="true"/>
+                <ruleset name="OJXU4TInt" versions="[01-01:${cd.pega.ruleset.max.version}]" unlocked="true"/>
+                <ruleset name="Azure" versions="[01-01:${cd.pega.ruleset.max.version}]" unlocked="true"/>
+                <ruleset name="SearchMap" versions="[01-01:${cd.pega.ruleset.max.version}]" unlocked="true"/>
+                <ruleset name="QuoteService" versions="[01-01:${cd.pega.ruleset.max.version}]" unlocked="true"/>
 
                 <!--Dictionaries -->
                 <instances classname="OJXU4T-OrderFul-Data-Bandwidth"/>
@@ -158,13 +110,6 @@
                 <parameter name="divName" value="Administration"/>
                 <parameter name="unitName" value="Installation"/>
             </pegaactivity>
-        </buildchunks>
-
-        <delete dir="${dir.staging}"/>
-
-        <copy todir="${dir.build}">
-            <fileset dir="${dir.src.resources}"/>
-            <fileset dir="${dir.parent.src.resources}"/>
-        </copy>
+        </goblin>
     </target>
 </project>
