Migration to Ninja 2.3

--- a/ninja-demo-app/src/main/resources/config/env-defaults.properties
+++ b/ninja-demo-app/src/main/resources/config/env-defaults.properties
@@ -17,3 +17,5 @@ pega.db.type=POSTGRESQL
 ################################
 ninja.tech.operator.id=admin@ninja
 ninja.tech.operator.password=rules
+
+pega.version=7.10
