--- a/ninja-demo-app/src/main/resources/config/env-qa.properties
+++ b/ninja-demo-app/src/main/resources/config/env-qa.properties
@@ -1,7 +1,7 @@
 ################################
 # Pega PE database
 ################################
-pega.db.url=jdbc:postgresql://localhost:5432/postgres
+pega.db.url=jdbc:postgresql://qa:5432/postgres
 pega.db.user=postgres
 pega.db.password=postgres
 pega.db.schema=data
@@ -10,7 +10,7 @@ pega.db.type=POSTGRESQL
 ################################
 # Pega PE webapp
 ################################
-pega.url=http://localhost:9080/prweb/PRServlet
+pega.url=http://qa:8080/prweb/PRServlet
 pega.operator.id=Administrator@pega.com
 pega.operator.password=install
 pega.truststore.file=
