--- a/ninja-demo-app/src/main/resources/config/env-qa.properties
+++ b/ninja-demo-app/src/main/resources/config/env-qa.properties
@@ -15,3 +15,4 @@ pega.operator.id=Administrator@pega.com
 pega.operator.password=install
 pega.truststore.file=
 pega.truststore.password=
+pega.uikit.version=11.01
